src/test/deca/context/invalid/homemade/return_void_decompile.res
class A extends Object {
	void x() {
		return 2;
	}
}
